# PeepSim

./: .gitignore  LICENSE  README.md  src_pre_mathfu.rar
Projects/: CMakeLists.txt  Makefile
Projects/Houdini_files/: scene_file.hipnc
Projects/Release/: PeepSimulator.hdanc
Projects/plugin/: plugin.sln  scene.hipnc
Projects/plugin/backup/: scene_bak1.hipnc
Projects/plugin/plugin/: CrowdSim.cpp  CrowdSim.h  CrowdSimPlugin.C  CrowdSimPlugin.h  DOP_GroupAndApply.C  DOP_GroupAndApply.h  LSYSTEMPlugin.C  LSYSTEMPlugin.h  PeepSimPlugin.C  PeepSimPlugin.h  SIM_SolverHair.C  SIM_SolverHair.h  SNOW_Solver.C  SNOW_Solver.h  SOP_Star.C  SOP_Star.h  SOP_Star.proto.h  Solver.cpp  Solver.h  globalincludes.h  plugin.vcxproj  plugin.vcxproj.filters
Projects/src/: CMakeLists.txt  CrowdSim.cpp  CrowdSim.h  Makefile  PBDMain.cpp  PBDMain.h  Solver.cpp  Solver.h  globalincludes.h  main.cpp  src
Projects/src/colliders/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h
Projects/src/components/: Agents.cpp  Agents.h  Scene.cpp  Scene.h
Projects/src/constraints/: ColliderConstraint.cpp  ColliderConstraint.h  CollisionAvoidanceConstraint.cpp  CollisionAvoidanceConstraint.h  Constraint.cpp  Constraint.h  FrictionalConstraint.cpp  FrictionalConstraint.h
Projects/src/integrator/: BaseIntegrator.h  ExpIntegrator.cpp  ExpIntegrator.h
Projects/src/pathfinders/: AStarFinder.cpp  AStarFinder.h  PathFinder.cpp  PathFinder.h
Projects/src/scenes/: scene_1.json  scene_2.json  scene_3.json  scene_4.json  scene_5.json  scene_6.json  scene_7.json  scene_8.json
(+41 files in other folders)
